[package]
name = "serde_cbor"
version = "0.3.3"
authors = ["Pyfisch <pyfisch@gmail.com>"]
repository = "https://github.com/pyfisch/cbor"
documentation = "http://pyfisch.github.io/cbor/serde_cbor/index.html"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "CBOR serialization and deserialization using serde."
keywords = ["serde", "cbor", "serialization"]

[dependencies]
byteorder = "0.5"
serde = { path="../serde/serde" }
serde_macros = { path="../serde/serde_macros", optional=true }

[features]
unstable = ["serde_macros"]
