[package]
name = "serde_cbor"
version = "0.8.1"
authors = [
    "Pyfisch <pyfisch@gmail.com>",
    "Steven Fackler <sfackler@gmail.com>"]
repository = "https://github.com/pyfisch/cbor"
documentation = "https://docs.rs/serde_cbor/"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "CBOR support for serde."
keywords = ["serde", "cbor", "serialization"]
categories = ["encoding"]

[dependencies]
byteorder = { path = "/sgx/third_party/byteorder" }
serde = { git = "https://github.com/ekiden/serde.git" }
sgx_tstd = { path = "/sgx/sgx_tstd" }

[dev-dependencies]
serde_bytes = "0.10"
serde_derive = "1.0.14"
