[package]
name = "serde_cbor-sgx"
version = "0.8.1"
authors = [
    "Pyfisch <pyfisch@gmail.com>",
    "Steven Fackler <sfackler@gmail.com>"]
repository = "https://github.com/pyfisch/cbor"
documentation = "https://docs.rs/serde_cbor/"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "CBOR support for serde."
keywords = ["serde", "cbor", "serialization"]
categories = ["encoding"]

[lib]
name = "serde_cbor"

[dependencies]
byteorder-sgx = { git = "https://github.com/ekiden/byteorder" }
serde-sgx = { git = "https://github.com/ekiden/serde" }
sgx_tstd = { git = "https://github.com/ekiden/rust-sgx-sdk" }

[dev-dependencies]
serde_bytes = "0.10"
serde_derive = "1.0.14"
